# python-project-lvl4

./: .pre-commit-config.yaml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: internal-check.yml
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py  0002_task.py  0003_label.py  0004_task_label.py  0005_taskuser_alter_task_author_alter_task_worker.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tests/: factories.py  test_i18n.py  test_labels.py  test_messages.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
templates/: base.html  home.html  status_create.html  status_list.html  user_change.html  user_delete.html  user_login.html  user_register.html  users_list.html
templates/labels/: change.html  create.html  delete.html  list.html
templates/statuses/: change.html  create.html  delete.html  list.html
templates/tasks/: change.html  create.html  delete.html  detail.html  list.html
templates/users/: change.html  delete.html  list.html  login.html  register.html
(+8 files in other folders)
